--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mongoose": "^8.4.3"
