--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mongoose": "^8.4.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.3",
+    "passport": "^0.7.0",
+    "passport-google-plus-token": "^2.1.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
